readme picture working?  and cleanup

--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- screen reader -->
 <head>
   <meta charset="UTF-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>When frontend means full stack</title>
-  <!-- simplifying the header to be more accessible, no dashes or colons -->
   <link rel="stylesheet" href="css/copy-cat.css">
-  <!-- link to css -->
 </head>
 <body>
   <header>
     <h4>
       CHRIS COYIER
     </h4>
-    <!-- can use nav instead -->
 
     <h1>
       When frontend means fullstack
@@ -25,12 +21,10 @@
     <h5>
       Reflections on the shifting responsibilities of frontend developers.
     </h5>
-    <!-- can use paragraph tag here -->
 
     <nav>
       Part of issue 13, May 2020, Frontend
     </nav>
-    <!-- could nest it inside a section? -->
   </header>
 
   <main>
